                               ViSP
                     Visual Servoing Platform
                     Resume of the change log

     Copyright Projet Lagadic / IRISA-INRIA Rennes, 2005-2011
                  www: http://www.irisa.fr/lagadic


ViSP 2.6.2 (under development)
  - New features
     - Introduction of new functionalities in vpIoTools to parse text 
       config files
  - Improvements
     - Remove warning detected with Visual C++ /Wall flag
     - Use CMake native package finder for zlib, png, jpeg, coin3d, gtk2 and  
       doxygen 3rd party libraries detection. If detection fails, we use our
       own package finder.
  - Bug fixed
     - [13536] Division by zero in vpMeLine
     - [13548] ViSP-2.6.1 produces several warnings with g++ 4.4.3, a const 
	       is missing in vpMbtDistanceLine.h
     - [13575] ViSP sporadic segmentation fault in vpMeLine
     - [13625] trackMeNurbs example produce an assertion failed with MSVC: 
               "list iterator not incrementable"
     - [13626] testXmlParser produre a Debug assertion failed with MSVC 
     - [13678] Cannot build all the examples if no display capability is 
	       available
     - [13679] GDI not detected on Windows 7 (64 bit) with Visual C++ Express 
	       2010
     - [13689] Memory leaks in jpeg reader: vpImageIo::readJPEG()
     - [13690] Memory leaks in NURBS tracker
     - [13843] In vpPolygon, isInside() may produce a segfault and getArea()
               or getCenter() give bad results 
	
----------------------------------------------
ViSP 2.6.1 (released October 20th, 2011)
  - New features
     - Introduction of Lapack support used for the SVD decomposition in vpMatrix
     - Introduction of vpAROgre that enables augmented reality applications 
       based on Ogre 3D. Some examples are provided in examples/ogre-simulator
     - Add cylinder's tracking in the model-based tracker.
     - Reintroduce OpenCV 2.0.0 support lost in ViSP 2.6.0