@@ -105,17 +105,19 @@ IF(BUILD_PACKAGE_RPM)
   #message("build rpm")
   INSTALL(TARGETS ${VISP_INTERN_LIBRARY}
     # Destination is either lib or lib64 on Unix 64 bits architectures
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE
-    COMPONENT libraries
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT libraries
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT libraries
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT libraries
+    PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE 
   )
 else()
   #message("don't build rpm")
   INSTALL(TARGETS ${VISP_INTERN_LIBRARY}
     # Destination is either lib or lib64 on Unix 64 bits architectures
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT libraries
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT libraries
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT libraries
     PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE 
-    COMPONENT libraries
   )
 endif()
 # install rule for all the headers
