@@ -2,7 +2,7 @@
                      Visual Servoing Platform
                      Resume of the change log
 
-     Copyright Projet Lagadic / IRISA-INRIA Rennes, 2005-2011
+     Copyright Projet Lagadic / IRISA-INRIA Rennes, 2005-2012
                   www: http://www.irisa.fr/lagadic
 
 
@@ -15,6 +15,10 @@ ViSP 2.6.2 (under development)
      - Use CMake native package finder for zlib, png, jpeg, coin3d, gtk2 and  
        doxygen 3rd party libraries detection. If detection fails, we use our
        own package finder.
+     - Under Windows, changes done to add "d" suffix to the library name when
+       build in debug (libvisp-2d.lib and libvisp-2d.dll). Install stage
+       copy libvisp-2[d].lib in $CMAKE_INSTALL_PREFIX/lib and libvisp-2[d].dll 
+       in $CMAKE_INSTALL_PREFIX/bin.
   - Bug fixed
      - [13536] Division by zero in vpMeLine
      - [13548] ViSP-2.6.1 produces several warnings with g++ 4.4.3, a const 
@@ -30,7 +34,8 @@ ViSP 2.6.2 (under development)
      - [13689] Memory leaks in jpeg reader: vpImageIo::readJPEG()
      - [13690] Memory leaks in NURBS tracker
      - [13843] In vpPolygon, isInside() may produce a segfault and getArea()
-               or getCenter() give bad results 
+               or getCenter() give bad results
+     - [13850] visp-config.bat produces a non compatible msvc 2010 output format			   
 	
 ----------------------------------------------
 ViSP 2.6.1 (released October 20th, 2011)
